heatmap showing initial convergence -- different network needed however...
Former-commit-id: e4d9bd1e8c3420902fc55b8121357168fc56a569 [formerly e3d38396c975d718ff49864ca60ca279390baf27]
Former-commit-id: c25d140d4fbccf535797a42096d5781bf1748f91

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/003-heatmap-method.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/003-heatmap-method.ipynb
@@ -84,7 +84,7 @@
     "        convolution_sequence.add(\n",
     "            tf.keras.layers.Conv2D(\n",
     "                channels, (3, 3), strides=1, padding='same',\n",
-    "                kernel_initializer=initializer, use_bias=False)\n",
+    "                kernel_initializer=initializer, use_bias=True)\n",
     "        )\n",
     "        if i != num_convs - 1:\n",
     "            convolution_sequence.add(\n",
@@ -96,7 +96,7 @@
     "        tf.keras.layers.Conv2D(\n",
     "            channels, (1, 1), strides=1, padding='same',\n",
     "            kernel_initializer=tf.ones_initializer(), \n",
-    "            use_bias=False, trainable=False)\n",
+    "            use_bias=True, trainable=False)\n",
     "    )\n",
     "    \n",
     "    x = tf.keras.layers.Add()(\n",
@@ -118,7 +118,7 @@
     "            strides=1,\n",
     "            padding='valid',\n",
     "            kernel_initializer=initializer,\n",
-    "            use_bias=False\n",
+    "            use_bias=True\n",
     "    )(x)\n",
     "    \n",
     "    repeats = 2\n",
@@ -150,7 +150,7 @@
     "        convolution_sequence.add(\n",
     "            tf.keras.layers.Conv2D(\n",
     "                channels, (3, 3), strides=1, padding='same',\n",
-    "                kernel_initializer=initializer, use_bias=False)\n",
+    "                kernel_initializer=initializer, use_bias=True)\n",
     "        )\n",
     "        if i != num_convs - 1:\n",
     "            convolution_sequence.add(\n",
@@ -163,7 +163,7 @@
     "        tf.keras.layers.Conv2D(\n",
     "            channels, (1, 1), strides=1, padding='same',\n",
     "            kernel_initializer=tf.ones_initializer(), \n",
-    "            use_bias=False, trainable=False)\n",
+    "            use_bias=True, trainable=False)\n",
     "    )\n",
     "    \n",
     "    x = tf.keras.layers.Add()(\n",
@@ -250,16 +250,8 @@
     "    def gaussian(x, y):\n",
     "        return norm * np.exp(-((x - x_pos)**2 + (y - y_pos)**2)/(2*variance))\n",
     "\n",
-    "    return gaussian\n",
-    "\n"
+    "    return gaussian"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -345,65 +337,10 @@
     "model_input, model_output, parameters = create_single_dataset(GRID_SIZE, PIXELS_PER_UNIT)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
-    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2])\n",
-    "plt.axis('equal')\n",
-    "\n",
-    "plt.figure(figsize=(10,10))\n",
     "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2], 100)\n",
     "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0], levels=np.linspace(0.5,1.2,100), cmap='magma')\n",
-    "plt.axis('equal')\n",
-    "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_input[:,:,2], 100)\n",
-    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1], levels=np.linspace(0.5,1.2,100), cmap='magma')\n",
+    "plt.contourf(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1], levels=np.linspace(0.5,1.2,100), cmap='cividis')\n",
     "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_output[:,:,0])\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.average(model_input[:,:,0] + model_output[:,:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(model_input[:,:,0], model_input[:,:,1], model_output[:,:,1])\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.average(model_input[:,:,1] + model_output[:,:,1])"
    ]
   },
   {
@@ -441,31 +378,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def plot_raw_images(model_input, model_output):\n",
     "    dim = model_input.shape\n",
     "    for i in range(dim[0]):        \n",
-    "        plt.figure()\n",
-    "        plt.pcolormesh(model_input[i, :, :, 0], model_input[i, :, :, 1], model_input[i, :, :, 2])\n",
-    "        plt.colorbar()\n",
+    "        plt.figure(figsize=(10,10))\n",
+    "        plt.contourf(model_input[i,:,:,0], model_input[i,:,:,1], model_input[i,:,:,2], 100)\n",
+    "        plt.contourf(\n",
+    "            model_input[i,:,:,0], model_input[i,:,:,1], model_output[i,:,:,0], \n",
+    "            levels=np.linspace(np.mean(model_output[i,:,:,0]),np.max(model_output[i,:,:,0]), 20), \n",
+    "            cmap='magma',\n",
+    "            alpha=0.3,\n",
+    "            linestyles=None,\n",
+    "        )\n",
+    "        plt.contourf(\n",
+    "            model_input[i,:,:,0], model_input[i,:,:,1], model_output[i,:,:,1], \n",
+    "            levels=np.linspace(np.mean(model_output[i,:,:,1]),np.max(model_output[i,:,:,1]), 20),\n",
+    "            cmap='cividis',\n",
+    "            alpha=0.3,\n",
+    "            linestyles=None,\n",
+    "        )\n",
     "        plt.axis('equal')\n",
     "        \n",
-    "        plt.figure()\n",
-    "        plt.pcolormesh(model_input[i, :, :, 0], model_input[i, :, :, 1], model_output[i, :, :, 0])\n",
-    "        plt.colorbar()\n",
-    "        plt.axis('equal')\n",
-    "        \n",
-    "        plt.figure()\n",
-    "        plt.pcolormesh(model_input[i, :, :, 0], model_input[i, :, :, 1], model_output[i, :, :, 1])\n",
-    "        plt.colorbar()\n",
-    "        plt.axis('equal')\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -521,23 +455,35 @@
     "        parameters = extract_parameters(batch_parameters[i, :])\n",
     "        \n",
     "        ground_truth_bb_centre = (\n",
-    "            np.median(model_input[i,:,:,0] + batch_model_outputs[i,:,:,0]),\n",
-    "            np.median(model_input[i,:,:,1] + batch_model_outputs[i,:,:,1]),            \n",
+    "            np.sum(model_input[i,:,:,0] * batch_model_outputs[i,:,:,0]) / np.sum(batch_model_outputs[i,:,:,0]),\n",
+    "            np.sum(model_input[i,:,:,1] * batch_model_outputs[i,:,:,0]) / np.sum(batch_model_outputs[i,:,:,0]),            \n",
+    "        )\n",
+    "        \n",
+    "        ground_truth_field_centre = (\n",
+    "            np.sum(model_input[i,:,:,0] * batch_model_outputs[i,:,:,1]) / np.sum(batch_model_outputs[i,:,:,1]),\n",
+    "            np.sum(model_input[i,:,:,1] * batch_model_outputs[i,:,:,1]) / np.sum(batch_model_outputs[i,:,:,1]),\n",
     "        )\n",
     "        \n",
     "        ground_truth_parameters = {\n",
     "            **parameters,\n",
-    "            'bb_centre': ground_truth_bb_centre\n",
+    "            'bb_centre': ground_truth_bb_centre,\n",
+    "            'field_centre': ground_truth_field_centre\n",
     "        }\n",
     "        \n",
     "        predicted_bb_centre = (\n",
-    "            np.median(model_input[i,:,:,0] + predicted[i,:,:,0]),\n",
-    "            np.median(model_input[i,:,:,1] + predicted[i,:,:,1]),            \n",
+    "            np.sum(model_input[i,:,:,0] * predicted[i,:,:,0]) / np.sum(predicted[i,:,:,0]),\n",
+    "            np.sum(model_input[i,:,:,1] * predicted[i,:,:,0]) / np.sum(predicted[i,:,:,0]),   \n",
+    "        )\n",
+    "        \n",
+    "        predicted_field_centre = (\n",
+    "            np.sum(model_input[i,:,:,0] * predicted[i,:,:,1]) / np.sum(predicted[i,:,:,1]),\n",
+    "            np.sum(model_input[i,:,:,1] * predicted[i,:,:,1]) / np.sum(predicted[i,:,:,1]),\n",
     "        )\n",
     "        \n",
     "        predicted_parameters = {\n",
     "            **parameters,\n",
-    "            'bb_centre': predicted_bb_centre\n",
+    "            'bb_centre': predicted_bb_centre,\n",
+    "            'field_centre': predicted_field_centre\n",
     "        }\n",
     "    \n",
     "        fig, axs = create_figure(batch_model_inputs[i,:,:,:], **ground_truth_parameters)\n",
