--- a/examples/protyping/tensorflow/002-DeepMind_Images.ipynb
+++ b/examples/protyping/tensorflow/002-DeepMind_Images.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "DeepMind Images.ipynb",
+      "name": "Copy of DeepMind Images.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
@@ -31,20 +31,85 @@
       "metadata": {
         "id": "smtp_dgDUB0x",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "329d1b6b-2a67-49a0-a115-863e6d8d61ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 935
+        }
       },
       "source": [
-        "# !pip install pynrrd tf-nightly\n",
+        "!pip install pynrrd tf-nightly\n",
         "\n",
-        "# !git clone https://github.com/deepmind/tcia-ct-scan-dataset.git\n",
+        "!git clone https://github.com/deepmind/tcia-ct-scan-dataset.git\n",
         "\n",
-        "# !curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
-        "# !sudo apt install git-lfs\n",
+        "!curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
+        "!sudo apt install git-lfs\n",
         "\n",
-        "# !cd tcia-ct-scan-dataset && git lfs pull"
+        "!cd tcia-ct-scan-dataset && git lfs pull"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: pynrrd in /usr/local/lib/python3.6/dist-packages (0.4.2)\n",
+            "Requirement already satisfied: tf-nightly in /usr/local/lib/python3.6/dist-packages (2.2.0.dev20200312)\n",
+            "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from pynrrd) (1.17.5)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (3.1.0)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.1.0)\n",
+            "Requirement already satisfied: protobuf>=3.8.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (3.10.0)\n",
+            "Requirement already satisfied: gast==0.3.3 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (0.3.3)\n",
+            "Requirement already satisfied: tf-estimator-nightly in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (2.3.0.dev2020031201)\n",
+            "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.12.0)\n",
+            "Requirement already satisfied: scipy==1.4.1; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.4.1)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.11.2)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.27.1)\n",
+            "Requirement already satisfied: google-pasta>=0.1.8 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (0.1.8)\n",
+            "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (0.9.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.1.0)\n",
+            "Requirement already satisfied: astunparse==1.6.3 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (1.6.3)\n",
+            "Requirement already satisfied: wheel>=0.26; python_version >= \"3\" in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (0.34.2)\n",
+            "Requirement already satisfied: tb-nightly<2.3.0a0,>=2.2.0a0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (2.2.0a20200310)\n",
+            "Requirement already satisfied: h5py<2.11.0,>=2.10.0 in /usr/local/lib/python3.6/dist-packages (from tf-nightly) (2.10.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.8.0->tf-nightly) (45.2.0)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (1.6.0.post2)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (0.4.1)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (1.7.2)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (3.2.1)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (2.21.0)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (1.0.0)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (1.3.0)\n",
+            "Requirement already satisfied: rsa<4.1,>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (4.0)\n",
+            "Requirement already satisfied: cachetools<3.2,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (3.1.1)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (0.2.8)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (2019.11.28)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (2.8)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (3.0.4)\n",
+            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (1.24.3)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (3.1.0)\n",
+            "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.6/dist-packages (from rsa<4.1,>=3.1.4->google-auth<2,>=1.6.3->tb-nightly<2.3.0a0,>=2.2.0a0->tf-nightly) (0.4.8)\n",
+            "fatal: destination path 'tcia-ct-scan-dataset' already exists and is not an empty directory.\n",
+            "Detected operating system as Ubuntu/bionic.\n",
+            "Checking for curl...\n",
+            "Detected curl...\n",
+            "Checking for gpg...\n",
+            "Detected gpg...\n",
+            "Running apt-get update... done.\n",
+            "Installing apt-transport-https... done.\n",
+            "Installing /etc/apt/sources.list.d/github_git-lfs.list...done.\n",
+            "Importing packagecloud gpg key... done.\n",
+            "Running apt-get update... done.\n",
+            "\n",
+            "The repository is setup! You can now install packages.\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "git-lfs is already the newest version (2.10.0).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 84 not upgraded.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -55,7 +120,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d2366b7b-804c-40aa-be77-bd74ba9e57ad"
+        "outputId": "514f924c-63e6-41d7-b8bc-628606bae3d6"
       },
       "source": [
         "import os\n",
@@ -117,7 +182,11 @@
         "Z_CONTEXT_DISTANCE = 3\n",
         "BATCH_SIZE = 1\n",
         "\n",
-        "TENSOR_TYPE = tf.float16"
+        "TENSOR_TYPE_STR = 'float32'\n",
+        "tf.keras.backend.set_floatx(\n",
+        "    TENSOR_TYPE_STR\n",
+        ")\n",
+        "TENSOR_TYPE = eval(f\"tf.{TENSOR_TYPE_STR}\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -184,11 +253,11 @@
       "metadata": {
         "id": "_mZcKQX1g-2i",
         "colab_type": "code",
+        "outputId": "3f667e0c-31fb-4832-b2e3-5f1cd19d5e0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8d352c23-1220-4803-dcb4-9764102afa41"
+        }
       },
       "source": [
         "def create_dataset_pipeline(paths, batch_size, grid_size, structure_name, z_context_distance, tensor_type):\n",
@@ -227,7 +296,7 @@
         "for model_input, model_output in test_dataset.take(1):\n",
         "    print(f\"{model_input.shape}, {model_output.shape}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +489,7 @@
         "model = Model()\n",
         "model.compile(\n",
         "    optimizer='adam',\n",
-        "    loss=tf.keras.losses.MeanSquaredError())"
+        "    loss=tf.keras.losses.MeanAbsoluteError())"
       ],
       "execution_count": 0,
       "outputs": []
@@ -430,16 +499,16 @@
       "metadata": {
         "id": "1YoYCkZBAjPy",
         "colab_type": "code",
+        "outputId": "046fd53a-5b14-4c4d-cc03-00bf1f1b268b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "4617d0f0-482d-426f-c51e-5e773b83e2a8"
+        }
       },
       "source": [
         "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
       ],
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 9
         }
       ]
     },
@@ -461,11 +530,11 @@
       "metadata": {
         "id": "hncaH1s9_NMy",
         "colab_type": "code",
+        "outputId": "f6312b6e-9443-4a48-d23a-70103748559b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "a77ea49e-5604-4316-fac2-ec5b1f576bf6"
+          "height": 85
+        }
       },
       "source": [
         "model.fit(\n",
@@ -481,19 +550,26 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "10/10 [==============================] - 22s 2s/step - loss: 0.0516 - val_loss: 0.0623\n",
+            "10/10 [==============================] - 38s 4s/step - loss: 0.0500 - val_loss: 0.0315\n",
             "Epoch 2/5\n",
-            "10/10 [==============================] - 22s 2s/step - loss: 0.0391 - val_loss: 0.0625\n",
-            "Epoch 3/5\n",
-            "10/10 [==============================] - 19s 2s/step - loss: 0.0360 - val_loss: 0.0315\n",
-            "Epoch 4/5\n",
-            "10/10 [==============================] - 23s 2s/step - loss: 0.0485 - val_loss: 3.0136e-04\n",
-            "Epoch 5/5\n",
-            " 6/10 [=================>............] - ETA: 7s - loss: 0.0495"
+            " 8/10 [=======================>......] - ETA: 7s - loss: 0.0352 "
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZUdz8EoHWNRu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
