strip output of colab notebooks
Former-commit-id: 1e4b389d020fcfe7f9bd00da890840bc9f1451c9

--- a/examples/protyping/tensorflow/002-DeepMind_Images.ipynb
+++ b/examples/protyping/tensorflow/002-DeepMind_Images.ipynb
@@ -7,40 +7,31 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/pymedphys/pymedphys/blob/master/examples/protyping/tensorflow/001-DeepMind_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/pymedphys/pymedphys/blob/master/examples/protyping/tensorflow/002-DeepMind_Images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 935
+    },
     "colab_type": "code",
-    "id": "smtp_dgDUB0x"
+    "id": "smtp_dgDUB0x",
+    "outputId": "329d1b6b-2a67-49a0-a115-863e6d8d61ea"
    },
    "outputs": [],
    "source": [
-    "# !pip install pynrrd\n",
+    "!pip install pynrrd tf-nightly\n",
     "\n",
-    "# !git clone https://github.com/deepmind/tcia-ct-scan-dataset.git\n",
+    "!git clone https://github.com/deepmind/tcia-ct-scan-dataset.git\n",
     "\n",
-    "# !curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
-    "# !sudo apt install git-lfs\n",
+    "!curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash\n",
+    "!sudo apt install git-lfs\n",
     "\n",
-    "# !cd tcia-ct-scan-dataset && git lfs pull"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "CdF_1jruFr8u"
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install tf-nightly"
+    "!cd tcia-ct-scan-dataset && git lfs pull"
    ]
   },
   {
@@ -53,7 +44,7 @@
     },
     "colab_type": "code",
     "id": "wrodJ26tUe3S",
-    "outputId": "95ba0706-94fd-497a-c911-cc735c4c8d45"
+    "outputId": "514f924c-63e6-41d7-b8bc-628606bae3d6"
    },
    "outputs": [],
    "source": [
@@ -71,43 +62,7 @@
     "\n",
     "# %tensorflow_version 2.x\n",
     "import tensorflow as tf\n",
-    "tf.__version__  # Expect '2.2.0-dev20200311'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 136
-    },
-    "colab_type": "code",
-    "id": "pWpz0FLSImkl",
-    "outputId": "138f0b5f-4289-497d-cb1c-35d9152b5557"
-   },
-   "outputs": [],
-   "source": [
-    "resolver = tf.distribute.cluster_resolver.TPUClusterResolver(tpu='grpc://' + os.environ['COLAB_TPU_ADDR'])\n",
-    "tf.config.experimental_connect_to_cluster(resolver)\n",
-    "tf.tpu.experimental.initialize_tpu_system(resolver)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 595
-    },
-    "colab_type": "code",
-    "id": "kLmqnl_pIq5V",
-    "outputId": "4c40ead3-094e-4bbe-e34e-c75e6f5587b1"
-   },
-   "outputs": [],
-   "source": [
-    "strategy = tf.distribute.experimental.TPUStrategy(resolver)"
+    "tf.__version__  # Expect '>= 2.2.0-dev20200312'"
    ]
   },
   {
@@ -131,35 +86,19 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "rS1odfgTZi9t"
-   },
-   "outputs": [],
-   "source": [
-    "# all_ct_files = list(data_root.glob('*/*/*/CT_IMAGE.nrrd'))\n",
-    "# all_ct_shapes = []\n",
-    "\n",
-    "# for ct_file in tqdm.tqdm(all_ct_files):\n",
-    "#     data, header = nrrd.read(ct_file)\n",
-    "#     all_ct_shapes.append(np.shape(data))\n",
-    "\n",
-    "# all_ct_shapes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "7GYTX2EFaIBt"
    },
    "outputs": [],
    "source": [
     "GRID_SIZE = 512\n",
     "Z_CONTEXT_DISTANCE = 3\n",
-    "BATCH_SIZE = 8\n",
+    "BATCH_SIZE = 1\n",
     "\n",
-    "TENSOR_TYPE = tf.bfloat16"
+    "TENSOR_TYPE_STR = 'float32'\n",
+    "tf.keras.backend.set_floatx(\n",
+    "    TENSOR_TYPE_STR\n",
+    ")\n",
+    "TENSOR_TYPE = eval(f\"tf.{TENSOR_TYPE_STR}\")"
    ]
   },
   {
@@ -223,9 +162,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 34
+    },
     "colab_type": "code",
-    "id": "_mZcKQX1g-2i"
+    "id": "_mZcKQX1g-2i",
+    "outputId": "3f667e0c-31fb-4832-b2e3-5f1cd19d5e0d"
    },
    "outputs": [],
    "source": [
@@ -260,25 +203,10 @@
     "\n",
     "\n",
     "test_dataset = create_dataset(test_data_roots)\n",
-    "validation_dataset = create_dataset(validation_data_roots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000
-    },
-    "colab_type": "code",
-    "id": "JnD2LWrNiKWZ",
-    "outputId": "95adf1c6-06db-405e-b3e8-c674b9ec577a"
-   },
-   "outputs": [],
-   "source": [
+    "validation_dataset = create_dataset(validation_data_roots)\n",
+    "\n",
     "for model_input, model_output in test_dataset.take(1):\n",
-    "    print(f\"{model_input.shape()}, {model_output.shape()}\")"
+    "    print(f\"{model_input.shape}, {model_output.shape}\")"
    ]
   },
   {
@@ -461,21 +389,24 @@
     "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
     "\n",
     "\n",
-    "with strategy.scope():\n",
-    "    model = Model()\n",
-    "    model.compile(\n",
-    "        optimizer='adam',\n",
-    "        loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "        metrics=['sparse_categorical_accuracy'])"
+    "# with strategy.scope():\n",
+    "model = Model()\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss=tf.keras.losses.MeanAbsoluteError())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 1000
+    },
     "colab_type": "code",
-    "id": "1YoYCkZBAjPy"
+    "id": "1YoYCkZBAjPy",
+    "outputId": "046fd53a-5b14-4c4d-cc03-00bf1f1b268b"
    },
    "outputs": [],
    "source": [
@@ -486,46 +417,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 85
+    },
     "colab_type": "code",
-    "id": "QAMLAv2a_Iic"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "JPBauA9f_Jao"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "zRDfvvFE_NKP"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "hncaH1s9_NMy"
+    "id": "hncaH1s9_NMy",
+    "outputId": "f6312b6e-9443-4a48-d23a-70103748559b"
    },
    "outputs": [],
    "source": [
-    "model.fit(test_dataset, epochs=5, validation_data=validation_dataset)"
+    "model.fit(\n",
+    "    test_dataset, \n",
+    "    epochs=5, \n",
+    "    steps_per_epoch=10, \n",
+    "    validation_data=validation_dataset, \n",
+    "    validation_steps=1)"
    ]
   },
   {
@@ -534,41 +441,19 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "r7SBTgZJ_NPR"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "b44pxFbS_NRK"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "PUef6h2YY1t8"
+    "id": "ZUdz8EoHWNRu"
    },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "accelerator": "TPU",
+  "accelerator": "GPU",
   "colab": {
    "collapsed_sections": [],
    "include_colab_link": true,
    "machine_shape": "hm",
-   "name": "DeepMind Images.ipynb",
+   "name": "Copy of DeepMind Images.ipynb",
    "provenance": []
   },
   "kernelspec": {
