--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '014638'"
+    "patient_id = '015231'"
    ]
   },
   {
@@ -289,8 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_and_file_name = 'BILATBREAST1/tel.1'  # plan directory and file name\n",
-    "icom_deliveries = ['20200213_084155', '20200213_084303', '20200213_084417', '20200213_084524', '20200213_084648', '20200213_084749']  # iCOM timestamps"
+    "monaco_plan_and_file_name = 'nosereplan/tel.1'  # plan directory and file name\n",
+    "icom_deliveries = ['20200326_111939']  # iCOM timestamps"
    ]
   },
   {
