--- a/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icom_directory = pathlib.Path(r'\\\\physics-server\\iComLogFiles\\patients')\n",
+    "icom_directory = pathlib.Path(r'\\\\rccc-physicssvr\\iComLogFiles\\patients')\n",
     "monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')"
    ]
   },
@@ -553,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
