add other sites

--- a/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/voila/Compare Monaco and iCOM.ipynb
@@ -49,8 +49,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icom_directory = pathlib.Path(r'\\\\rccc-physicssvr\\iComLogFiles\\patients')\n",
-    "monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')"
+    "SITE_DIRECTORIES = {\n",
+    "    'rccc': {\n",
+    "        'monaco': pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical'),\n",
+    "        'escan': pathlib.Path(r'P:\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')\n",
+    "    },\n",
+    "    'nbcc': {\n",
+    "        'monaco': pathlib.Path(r'X:\\NBCCC\\1~Clinical'),\n",
+    "        'escan': pathlib.Path(r'\\\\10.0.0.4\\Shared\\SCAN\\ESCAN\\Phys\\Logfile PDFs')\n",
+    "    },\n",
+    "    'sash': {\n",
+    "        'monaco': pathlib.Path(r'W:\\SASH\\1~Clinical'),\n",
+    "        'escan': pathlib.Path(r'\\\\10.0.0.3\\SASH-Mosaiq-eScan\\Logfile PDFs')\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -59,8 +71,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')\n",
-    "pdf_directory = pathlib.Path(r'P:\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')"
+    "icom_directory = pathlib.Path(r'\\\\rccc-physicssvr\\iComLogFiles\\patients')\n",
+    "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')\n",
+    "# pdf_directory = pathlib.Path(r'P:\\Scanned Documents\\RT\\PhysChecks\\Logfile PDFs')"
    ]
   },
   {
@@ -88,15 +110,34 @@
    "outputs": [],
    "source": [
     "class Data(traitlets.HasTraits):\n",
+    "    site = traitlets.Unicode()\n",
     "    patient_id = traitlets.Unicode()\n",
     "    delivery_timestamp = traitlets.List(traitlets.Unicode())\n",
     "    plan_names = traitlets.List(traitlets.Unicode())\n",
     "    \n",
     "data = Data()\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def update_file_paths(change):\n",
     "    patient_id = data.patient_id\n",
+    "    site = data.site\n",
+    "    \n",
+    "    monaco_directory = SITE_DIRECTORIES[site]['monaco']\n",
     "    \n",
     "    \n",
     "    all_tel_paths = list(monaco_directory.glob(f'*~{patient_id}/plan/*/*tel.1'))\n",
@@ -180,13 +221,40 @@
    "outputs": [],
    "source": [
     "patient_id_text = ipywidgets.Text(\n",
-    "    description=\"Patient ID\"\n",
+    "    description=\"Patient ID\",\n",
+    "    disabled=True\n",
     ")\n",
     "\n",
     "def handle_patient_id_change(change):\n",
     "    data.patient_id = change.new.zfill(6)\n",
     "    \n",
     "patient_id_text.observe(handle_patient_id_change, names=['value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_select = ipywidgets.Select(\n",
+    "    options=SITE_DIRECTORIES.keys(),\n",
+    "    value=None,\n",
+    "    rows=len(SITE_DIRECTORIES.keys()),\n",
+    "    description='Site',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "def handle_site_change(change):\n",
+    "    if change.new:\n",
+    "        patient_id_text.disabled = False\n",
+    "    \n",
+    "    patient_id_text.value = ''\n",
+    "    data.patient_id = ''\n",
+    "    \n",
+    "    data.site = site_select.value\n",
+    "    \n",
+    "site_select.observe(handle_site_change, names=['value'])"
    ]
   },
   {
@@ -326,6 +394,10 @@
     "    patient_id = data.patient_id\n",
     "    monaco_plans = monaco_select.value\n",
     "    icom_deliveries = icom_select.value\n",
+    "    site = data.site\n",
+    "    \n",
+    "    monaco_directory = SITE_DIRECTORIES[site]['monaco']\n",
+    "    pdf_directory = SITE_DIRECTORIES[site]['escan']\n",
     "    \n",
     "    print_markdown('## Output')\n",
     "    \n",
@@ -461,6 +533,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Site\n",
+    "\n",
+    "Choose the site to search for patient data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site_select"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Patient ID\n",
     "\n",
     "Provide the Patient ID for the plan you wish to check"
@@ -497,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### iCOM Plan\n",
+    "## iCOM Plan\n",
     "\n",
     "Select the time(s) for a delivery that would match a single fraction of the plan selected above. As before, `Ctrl + Click` can be used to select multiple logs."
    ]
@@ -553,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
